// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton disabled matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "MozTransitionProperty": "opacity",
      "MozUserSelect": "none",
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "column",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitTransitionDuration": "0.15s",
      "WebkitTransitionProperty": "opacity",
      "WebkitUserSelect": "none",
      "alignItems": "center",
      "cursor": "inherit",
      "flexBasis": "0%",
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexAlign": "center",
      "msFlexDirection": "column",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "msTouchAction": "manipulation",
      "msUserSelect": "none",
      "touchAction": "manipulation",
      "transitionDuration": "0.15s",
      "transitionProperty": "opacity",
      "userSelect": "none",
    }
  }
  tabIndex="0"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxPack": "center",
        "WebkitJustifyContent": "center",
        "alignItems": "center",
        "backgroundColor": "rgba(12,38,61,1.00)",
        "borderBottomLeftRadius": "39px",
        "borderBottomRightRadius": "39px",
        "borderTopLeftRadius": "39px",
        "borderTopRightRadius": "39px",
        "height": "74px",
        "justifyContent": "center",
        "marginBottom": "7px",
        "marginLeft": "7px",
        "marginRight": "7px",
        "marginTop": "7px",
        "msFlexAlign": "center",
        "msFlexPack": "center",
        "width": "74px",
      }
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.00)",
          "color": "rgba(0,0,0,0.32)",
          "fontFamily": "MaterialIcons",
          "fontSize": "35px",
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
      
    </div>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,0,0,0.32)",
        "fontSize": "11px",
      }
    }
  >
    edit
  </div>
</div>
`;

exports[`IconButton enabled matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "MozTransitionProperty": "opacity",
      "MozUserSelect": "none",
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "column",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitTransitionDuration": "0.15s",
      "WebkitTransitionProperty": "opacity",
      "WebkitUserSelect": "none",
      "alignItems": "center",
      "cursor": "pointer",
      "flexBasis": "0%",
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexAlign": "center",
      "msFlexDirection": "column",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "msTouchAction": "manipulation",
      "msUserSelect": "none",
      "touchAction": "manipulation",
      "transitionDuration": "0.15s",
      "transitionProperty": "opacity",
      "userSelect": "none",
    }
  }
  tabIndex="0"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxPack": "center",
        "WebkitJustifyContent": "center",
        "alignItems": "center",
        "backgroundColor": "rgba(12,38,61,1.00)",
        "borderBottomLeftRadius": "39px",
        "borderBottomRightRadius": "39px",
        "borderTopLeftRadius": "39px",
        "borderTopRightRadius": "39px",
        "height": "74px",
        "justifyContent": "center",
        "marginBottom": "7px",
        "marginLeft": "7px",
        "marginRight": "7px",
        "marginTop": "7px",
        "msFlexAlign": "center",
        "msFlexPack": "center",
        "width": "74px",
      }
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.00)",
          "color": "rgba(40,44,52,1.00)",
          "fontFamily": "MaterialIcons",
          "fontSize": "35px",
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
      
    </div>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "color": "inherit",
        "fontSize": "11px",
      }
    }
  >
    edit
  </div>
</div>
`;
